styling issues for safari on iOS

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -19,6 +19,13 @@ input, textarea {
   color: $highlight-color !important;
 }
 
+input[type="date"] {
+  display: block;
+  -webkit-appearance: textfield;
+  -moz-appearance: textfield;
+  min-height: 1.2em;
+}
+
 .light-bg {
   background-color: $background-lighter;
 }
@@ -38,7 +45,7 @@ input, textarea {
 
 #errors {
   width: 100%;
-  height: 2em;
+  height: 2.5em;
   color: $warning-color;
   text-align: center;
 }
